Initial commit with index.html and README.md

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 <title>Monique Lotriet|Front End Journey</title>
 <!-- Decsription for the site -->
 <meta name="description" content="Journey to becoming a Front End Web Developer">
+<link rel="stylesheet" href="styles.css">
+
+
+
 </head>
 <!-- Everything that you can see goes into the body tag -->
 <body>
 <header>
 <h1>Monique Lotriet</h1>
+<p class="SubHeader">My Front-End Journey</p>
+<p class="SubText"> Hi, I'm learning how to build websites from scratch.<br> This page is my first project, and it’s where I’ll share my progress as I grow.</p>
 <!-- Navigation menu --> 
 <nav aria-label="main navigation menu">
 <ul>
@@ -27,23 +33,24 @@
 <li><a href="#Feedback">Feedback</a></li>
 </ul>
 </nav>
-<p>Hi, I'm learning how to build websites from scratch. This page is my first project, and it’s where I’ll share my progress as I grow.</p>
 </header>
   
 <main>
+<div class="Section">
 <!--About section-->
 <section id="About">
 <h2>About Me</h2>
 <p>
-I began my journey in front-end development in 2025. Every day has been a learning opportunity.
+I began my journey in front-end development in 2025. Every day has been a learning opportunity.<br>
 I'm currently working on developing my skills further through hands-on projects, continuous learning, and staying updated with modern web technologies.</p>
+
 <!-- Image -->
 <img src="https://github.com/MoniqueTech/Front_End_Portfolio/blob/e484b2cef46af998937dafa37c9d9731df4c2653/Front-End-Developer-Roadmap.PNG" alt="Front-End Developer Roadmap" width="400" height="200" loading="lazy">
-<p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p>
+<p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p></div>
 </section>
 
   
-
+<div class="Section">
 <!-- Goals Section-->
 <section id="Goals">
 <h2>Goals</h2>
@@ -72,8 +79,10 @@ I'm currently working on developing my skills further through hands-on projects,
 <p>This space is reserved for my next project.</p>
 </article>
 </section>
-
+</div>
+  
 <!--Form Section-->
+
 <section id="Feedback">
 <h2>Feedback</h2>
 <form>
@@ -81,12 +90,13 @@ I'm currently working on developing my skills further through hands-on projects,
 <input type="text" id="name" name="name">
 <label for="email">Email:</label>
 <input type="email" id="email" name="email">
-<label for="feedback">What should I learn next</label>
-<input type="text" id="feedback" name="feedback">
+<label for="text">What should I learn next</label>
+<input type="text" id="text" name="text">
 <button type="submit">Submit</button>
 </form>
-</section>
-<footer>
+</section
+
+<>
 <p>&copy; 2025 Monique Lotriet | Built with love and HTML/CSS</p>
 </footer>
 </main>
