--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li><a href="#About">About Me</a></li>  
 <li><a href="#Goals">Goals</a></li>
 <li><a href="#Projects">Projects </a></li>
-<li><a href="#Contact">Contact</a></li>
+<li><a href="#Feedback">Feedback</a></li>
 </ul>
 </nav>
 <p>Hi, I'm learning how to build websites from scratch. This page is my first project, and it’s where I’ll share my progress as I grow.</p>
