--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I'm currently working on developing my skills further through hands-on projects,
 <label for="email">Email:</label>
 <input type="email" id="email" name="email">
 <label for="feedback">What should I learn next</label>
-<input type="text" id="learn" name="learn">
+<input type="text" id="feedback" name="feedback">
 <button type="submit">Submit</button>
 </form>
 </section>
