--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 I began my journey in front-end development in 2025. Every day has been a learning opportunity.
 I'm currently working on developing my skills further through hands-on projects, continuous learning, and staying updated with modern web technologies.</p>
 <!-- Image -->
-<img src="Front-End-Developer-Roadmap.PNG" alt="Front-End Developer Roadmap" width="400" height="200" loading="lazy">
+<img src="https://github.com/MoniqueTech/Front_End_Portfolio/blob/e484b2cef46af998937dafa37c9d9731df4c2653/Front-End-Developer-Roadmap.PNG" alt="Front-End Developer Roadmap" width="400" height="200" loading="lazy">
 <p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p>
 </section>
 
