Update README.md, index.html and add styles.css for styling improvements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <link rel="stylesheet" href="styles.css">
 
 
-
 </head>
 <!-- Everything that you can see goes into the body tag -->
 <body>
@@ -46,8 +45,9 @@ I'm currently working on developing my skills further through hands-on projects,
 
 <!-- Image -->
 <img src="https://github.com/MoniqueTech/Front_End_Portfolio/blob/e484b2cef46af998937dafa37c9d9731df4c2653/Front-End-Developer-Roadmap.PNG" alt="Front-End Developer Roadmap" width="400" height="200" loading="lazy">
-<p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p></div>
+<p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p>
 </section>
+</div>
 
   
 <div class="Section">
@@ -94,9 +94,9 @@ I'm currently working on developing my skills further through hands-on projects,
 <input type="text" id="text" name="text">
 <button type="submit">Submit</button>
 </form>
-</section
+</section>
 
-<>
+<footer>
 <p>&copy; 2025 Monique Lotriet | Built with love and HTML/CSS</p>
 </footer>
 </main>
