Your commit message

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <!-- Decsription for the site -->
 <meta name="description" content="Journey to becoming a Front End Web Developer">
 <link rel="stylesheet" href="styles.css">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Handlee&display=swap" rel="stylesheet">
+<script src="script.js" defer></script>
 
 </head>
 <!-- Everything that you can see goes into the body tag -->
@@ -42,7 +45,7 @@
 <p>
 I began my journey in front-end development in 2025. Every day has been a learning opportunity.<br>
 I'm currently working on developing my skills further through hands-on projects, continuous learning, and staying updated with modern web technologies.</p>
-
+<div class="WelcomeBTN" id="WelcomeBTN">Click HERE</div>
 <!-- Image -->
 <img src="https://github.com/MoniqueTech/Front_End_Portfolio/blob/e484b2cef46af998937dafa37c9d9731df4c2653/Front-End-Developer-Roadmap.PNG" alt="Front-End Developer Roadmap" width="400" height="200" loading="lazy">
 <p>This image was published on <a href="https://www.tops-int.com/blog/how-to-become-a-front-end-developer">Tops Technology</a></p>
